samples/_failures_safe/1761532960_ca5589_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63f7113a.c: In function ‘main’:
./samples/SAFE/__tmp_63f7113a.c:199:9: error: expected expression at end of input
  199 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_63f7113a.c:199:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63f7113a.c:199:9: error: expected declaration or statement at end of input
